completed the feed of the dashboard

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,4 @@
 @use './components/navigation';
 @use './pages/dashboard';
-@use './components/dateRangeSelector'
+@use './components/dateRangeSelector';
+@use './components/feedCard'
