--- a/src/styles/pages/_dashboard.scss
+++ b/src/styles/pages/_dashboard.scss
@@ -1,3 +1,15 @@
 body {
     background-color: #F8F8F8;
+
+    @media (max-width:1350px) {
+        .info {
+            display: flex;
+            text-align: center;
+
+        }
+
+        .dashboard {
+            display: none;
+        }
+    }
 }
